# ob-algdati-ws19

./: README.md
Rational/: CMakeLists.txt  Rational.cpp  Rational.h  main.cpp
helloworld/: CMakeLists.txt
stackT/: CMakeLists.txt  main.cpp  stack.h
